Removed a bunch of dependencies on sun-proprietary classes.
Thanks to Chad La Joie for the patches.


git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@1432 ab3bd59b-922f-494d-bb5f-6f0a3c29deca